--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,36 @@
                     <errorRateThresholdInPercent>10</errorRateThresholdInPercent>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.2</version>
+                <configuration>
+                    <excludes>
+                        <exclude>/tech/zerofiltre/**/model/**/*</exclude>
+                        <exclude>/tech/zerofiltre/**/mapper/**/*</exclude>
+                        <exclude>/tech/zerofiltre/**/*JPA.*</exclude>
+                        <exclude>/tech/zerofiltre/**/ZerofiltreBlogApplication.*</exclude>
+                        <exclude>**/config/*</exclude>
+                        <exclude>**/util/*</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- attached to Maven test phase -->
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
