--- a/pom.xml
+++ b/pom.xml
@@ -276,21 +276,7 @@
                         <exclude>**/util/*</exclude>
                     </excludes>
                 </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <!-- attached to Maven test phase -->
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <!--               Ajouter la partie executions ICI-->
             </plugin>
             <plugin>
                 <groupId>com.lazerycode.jmeter</groupId>
