--- a/k8s/bootcamp/secrets.yml
+++ b/k8s/bootcamp/secrets.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: <votre-namespace>
-  namespace: zerofiltre-blog-api-nom-prenom
+  name: zerofiltre-blog-api-ngassam-william
+  namespace: zerofiltre-bootcamp 
 data:
   security_jwt_secret: Snd0U2VjcmV0S2V5
-  spring_datasource_password: # ajouter votre mot de passe de la DB
-  spring_mail_password:
+  spring_datasource_password: QmhqRTlLSk1aYg==
+  spring_mail_password: QmhqRTlLSk1aYg==
 type: Opaque
