--- a/k8s/microservices.yml
+++ b/k8s/microservices.yml
@@ -1,9 +1,8 @@
-#TODO Compléter le fichier afin qu'il fonctionne
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: <votre-namespace>
-  name: blog-backend-nom-prenom
+  name: blog-backend-ngassam-william
+  namespace: zerofiltre-bootcamp
 spec:
   minReadySeconds: 30
   progressDeadlineSeconds: 300
@@ -23,7 +22,7 @@ spec:
           ports:
             - containerPort: 6379
         - name: blog-backend
-          image: imzerofiltre/zerofiltretech-blog:0.0.1
+          image: ${api_image_tag}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
@@ -34,139 +33,119 @@ spec:
             limits:
                 cpu: ${limits_cpu}
                 memory: ${limits_memory}
-          livenessProbe:
-              httpGet:
-                path: /actuator/health
-                port: 80
-              periodSeconds: 300
-              timeoutSeconds: 5
 
-          readinessProbe:
-              httpGet:
-                path: /actuator/health
-                port: 80
-              periodSeconds: 30
-              timeoutSeconds: 5
-
-          startupProbe:
-              httpGet:
-                path: /actuator/health
-                port: 80
-              initialDelaySeconds: 60
-              timeoutSeconds: 5
-              failureThreshold: 10
 
           env:
             # Ajouter les variables d'environnement provenant des secrets, tel que c'est fait pour les configmaps ci-dessous
             - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: logging_level_org_springframework
             - name: LOGGING_LEVEL_ORG_HIBERNATE_SQL
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: logging_level_org_hibernate_sql
             - name: LOGGING_LEVEL_TECH_ZEROFILTRE
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: logging_level_tech_zerofiltre
             - name: SERVER_PORT
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: server_port
             - name: THROTTLING_CAPACITY
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: throttling_capacity
             - name: THROTTLING_TIME_SECONDS
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: throttling_time_seconds
             - name: SPRING_LIQUIBASE_CHANGELOG
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: spring_liquibase_changelog
             - name: SPRING_MAIL_HOST
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: spring_mail_host
             - name: SPRING_MAIL_PORT
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: spring_mail_port
             - name: SPRING_MAIL_USERNAME
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: spring_mail_username
             - name: SPRING_DATASOURCE_USERNAME
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: spring_datasource_username
             - name: SPRING_DATASOURCE_URL
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: spring_datasource_url
             - name: HIBERNATE_DDL_AUTO
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: hibernate_ddl_auto
             - name: ZEROFILTRE_ENV
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: zerofiltre_env
             - name: SECURITY_JWT_EXPIRATION
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: security_jwt_expiration
             - name: SECURITY_JWT_URI
-              valueFrom:
+              valueFrom: 
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: security_jwt_uri
             - name: ALLOWED_ORIGINS_PATTERN
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: allowed_origins_pattern
             - name: REMINDER_RATE
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: reminder_rate
             - name: REMINDER_INITIAL_DELAY
               valueFrom:
                 configMapKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: reminder_initial_delay
             - name: SPRING_MAIL_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: spring_mail_password
             - name : SPRING_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name:
+                  name: zerofiltre-blog-api-ngassam-william
                   key: spring_datasource_password
             - name: SECURITY_JWT_SECRET
               valueFrom:
                 secretKeyRef:
-                   name:
+                   name: zerofiltre-blog-api-ngassam-william
                    key: security_jwt_secret
 
 
@@ -175,8 +154,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: <votre-namespace>
-  name: blog-backend-<nom-prenom>
+  name: blog-backend-ngassam-william
+  namespace: zerofiltre-bootcamp
 spec:
   ports:
     - protocol: TCP
@@ -188,8 +167,8 @@ spec:
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  namespace: <votre-namespace>
-  name: blog-backend-<nom-prenom>
+  name: blog-backend-ngassam-william
+  namespace: zerofiltre-bootcamp
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     # add an annotation indicating the issuer to use.
@@ -201,7 +180,7 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: blog-backend-<nom-prenom>
+              serviceName: blog-backend-ngassam-william
               servicePort: 80
   tls: # < placing a host in the TLS config will indicate a certificate should be created
     - hosts:
