--- a/k8s/blogapi/templates/configmap.yml
+++ b/k8s/blogapi/templates/configmap.yml
@@ -6,5 +6,5 @@ metadata:
     {{- include "blogapi.labels" . | nindent 4 }}
 data:
   {{- range $key, $val := .Values.configMap }}
-  {{ $key }}: {{ $val }}
+  {{ $key }}: {{ $val | quote }}
   {{- end}}
