--- a/k8s/blogapi/templates/deployment.yaml
+++ b/k8s/blogapi/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: redis-${env_name}
+        - name: {{ printf "redis-%s" .Chart.Name }}
           image: redis
           imagePullPolicy: IfNotPresent
           ports:
