--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,28 @@ services:
       - 80:80
     networks:
       - monitoring
+    environment:
+      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK: ${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK}
+      LOGGING_LEVEL_ORG_HIBERNATE_SQL: ${LOGGING_LEVEL_ORG_HIBERNATE_SQL}
+      LOGGING_LEVEL_TECH_ZEROFILTRE: ${LOGGING_LEVEL_TECH_ZEROFILTRE}
+      SERVER_PORT: ${SERVER_PORT}
+      THROTTLING_CAPACITY: ${THROTTLING_CAPACITY}
+      THROTTLING_TIME_SECONDS: ${THROTTLING_TIME_SECONDS}
+      SPRING_LIQUIBASE_CHANGELOG: ${SPRING_LIQUIBASE_CHANGELOG}
+      SPRING_MAIL_HOST: ${SPRING_MAIL_HOST}
+      SPRING_MAIL_PORT: ${SPRING_MAIL_PORT}
+      SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      HIBERNATE_DDL_AUTO: ${HIBERNATE_DDL_AUTO}
+      ZEROFILTRE_ENV: ${ZEROFILTRE_ENV}
+      SECURITY_JWT_EXPIRATION: ${SECURITY_JWT_EXPIRATION}
+      SECURITY_JWT_URI: ${SECURITY_JWT_URI}
+      GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID}
+      STACKOVERFLOW_KEY: ${STACKOVERFLOW_KEY}
+      ALLOWED_ORIGINS_PATTERN: ${ALLOWED_ORIGINS_PATTERN}
+      REMINDER_RATE: ${REMINDER_RATE}
+      REMINDER_INITIAL_DELAY: ${REMINDER_INITIAL_DELAY}
 
   grafana:
     image: grafana/grafana:latest
