--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,21 @@
                         <exclude>**/util/*</exclude>
                     </excludes>
                 </configuration>
-                <!--               Ajouter la partie executions ICI-->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- attached to Maven test phase -->
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>com.lazerycode.jmeter</groupId>
